# llm-ir

./: .editorconfig  BLUEPRINT.md  Cargo.toml  README.md  TODO.md  pulse-cheat-sheet.md
agentic-home-orchestrator/: README.md
agentic-home-orchestrator/docs/: OVERVIEW.md
agentic-home-orchestrator/examples/: quickstart.pulse
agentic-home-orchestrator/src/: orchestrator.pulse  sse_bridge.pulse
agentic-home-orchestrator/tests/: async_cancel.pulse  caps_violation_neg.pulse  proc_spawn_and_stream.pulse
crates/ast/: Cargo.toml  README.md
crates/ast/src/: lib.rs
crates/asyncx/: Cargo.toml  README.md
crates/asyncx/src/: lib.rs
crates/canon/: Cargo.toml  README.md
crates/canon/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/diag/: Cargo.toml  README.md
crates/diag/src/: lib.rs
crates/diag/tests/: diag_tests.rs
crates/llm-ir/: Cargo.toml  README.md
crates/llm-ir/tests/: pipeline.rs  sys_null.rs
crates/lower/: Cargo.toml  README.md
crates/lower/src/: lib.rs
crates/reader/: Cargo.toml  README.md
crates/reader/src/: lib.rs
crates/schema/: Cargo.toml  README.md
crates/schema/src/: lib.rs
crates/sys/: Cargo.toml  README.md
crates/sys/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs
crates/vm/: Cargo.toml  README.md
docs/: CHEATSHEET.md  CONFORMANCE.md  FEATURES.md  SPEC.md  conformance-pack.md  features.md  spec-surface.md
docs/conformance/: async.md  caps.md  core.md  fs-hash.md  proc-gpu.md  rails.md  streaming.md
examples/agentic-home-orchestrator/: README.md
(+7 files in other folders)
