[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
miette = "7"
ariadne = "0.4"
thiserror = "1"
indexmap = "2"
smallvec = "1"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winnow = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
