[package]
name = "llmirc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
llmir-reader = { path = "../reader" }
llmir-canon = { path = "../canon" }
llmir-schema = { path = "../schema" }
llmir-types = { path = "../types" }
llmir-lower = { path = "../lower" }
llmir-vm = { path = "../vm" }
